# src/utils/swagger.json
@@ -64,6 +64,38 @@
         }
       }
     },
+    "/auth/refresh": {
+      "post": {
+        "tags": ["auth"],
+        "summary": "Refresh token pair.",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "description": "use refresh token",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "data",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/authActivate"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Return pair tokens",
+            "schema": {
+              "$ref": "#/definitions/PairToken"
+            }
+          }
+        }
+      }
+    },
     "/orders/list": {
       "get": {
         "tags": ["orders"],
@@ -536,6 +568,99 @@
           }
         }
       }
+    },
+    "/groups/add": {
+      "post": {
+        "tags": ["groups"],
+        "summary": "Add new user",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "required": true,
+            "description": "Access token",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "data",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/AddGroup"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns the group id.",
+            "schema": {
+              "$ref": "#/definitions/Id"
+            }
+          }
+        }
+      }
+    },
+    "/groups/list": {
+      "get": {
+        "tags": ["groups"],
+        "summary": "Get list groups",
+        "operationId": "getGroup",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "required": true,
+            "description": "Access token",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns the groups list.",
+            "schema": {
+              "$ref": "#/definitions/Group"
+            }
+          }
+        }
+      }
+    },
+    "/groups/{groupId}": {
+      "get": {
+        "tags": ["groups"],
+        "summary": "Get one group by id",
+        "operationId": "getGroup",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "required": true,
+            "description": "Access token",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "groupId",
+            "in": "path",
+            "description": "ID of group to return",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns the group by id.",
+            "schema": {
+              "$ref": "#/definitions/Group"
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -672,6 +797,31 @@
         "userId": {
           "type": "string",
           "default": null
+        }
+      }
+    },
+    "Group": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "orderId": {
+          "type": "string"
+        },
+        "groupName": {
+          "type": "string"
+        }
+      }
+    },
+    "AddGroup":{
+      "type": "object",
+      "properties": {
+        "orderId": {
+          "type": "string"
+        },
+        "groupName": {
+          "type": "string"
         }
       }
     },
